# GuardBench

./: .coveragerc  .gitignore  .pre-commit-config.yaml  10_DAY_BUILD_COMPLETE.md  ADAPTER_INTERFACE_SUMMARY.md  ALL_CERTIFICATIONS_MASTER.md  ANOMALY_DETECTION_SUMMARY.md  A_PLUS_IMPROVEMENT_PLAN.md  BACKEND_README.md  BENCHMARK_LEADERBOARD_SUMMARY.md  BROWSER-MCP-URL.md  CENTRALIZED_CONFIG_SUMMARY.md  CERTIFICATIONS_COMPLETE_PORTFOLIO.md  CHANGELOG.md  CI_TOUCH.md  CI_TOUCH.txt  CLAUDE.md  CMMC_COMPLIANCE.md  COMPETITIVE_MARKET_EVALUATION.md  COMPLETE-SOLUTION-v4.1.5.md  COMPLIANCE_MASTER_SUMMARY.md  CONTRIBUTING.md  CRITICAL-ERROR-FIXED.md  CRITICAL-FIX-v4.1.6.md  CSA_STAR_COMPLIANCE.md  DASHBOARDS_READY.md  DATABASE_ENCRYPTION_GUIDE.md  DEMO_IS_REAL.md  DEMO_TEST_CASES.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ROADMAP.md  Dockerfile  ENSEMBLE_INTEGRATION_COMPLETE.md  EXECUTIVE_SUMMARY.md  FEDERATED_TELEMETRY_SUMMARY.md  FEDERATION_GUIDE.md  FEDRAMP_COMPLIANCE.md  FEDRAMP_CONTROLS_MATRIX.md  FEDRAMP_SUMMARY.md  (+110 more)
.codex/: setup.sh
.github/: BRANCH_PROTECTION_SETUP.md  CODEOWNERS  social-preview.md
.mplcache/: fontlist-v390.json
ai-engine/: ai-engine.php  readme.txt
certs/: server.crt  server.key
dashboard/: analytics.html  demo.html  executive.html  index.html  investor.html  monitor.html  playground.html  policy-editor.html  technical.html  technical.html.bak2  technical.html.bak3  upload.html
data/: federation.yaml  ml_daemon_state.txt  quarantine.yaml  rows.yaml  rows.yaml.bak-20250930-210605  rows.yaml.bak-20251002-020255  rows.yaml.bak-20251002-020523
dataset/: benchmark_safety_basic.csv  benchmark_safety_multilingual.csv  conversation_demo.yaml  conversation_extortion.yaml  conversation_support.yaml  runtime_sample.csv  sample_augmented.csv  sample_backup.csv
demos/: aegis_demo.py
docs/: 5_MINUTE_INTEGRATION.md  ADAPTERS.md  ADAPTER_REGISTRY.md  ANOMALY_DETECTION.md  ANOMALY_DETECTION_TUNING.md  AUTOPATCH.md  BENCHMARK_LEADERBOARD.md  CONFIG.md  CONFIGURATION.md  CONFIG_MANAGEMENT.md  COST_VISIBILITY.md  DATABASE_STABILITY.md  DEMO.md  EMBEDDING.md  EVIDENCE.md  EXPORT_STREAMING.md  FEDERATED_TELEMETRY.md  GETTING_STARTED.md  GRPC.md  HARDENING_REPORT.md  HELM.md  IMAGE_MODERATION.md  IMAGE_MODERATION_CI.md  MULTILINGUAL.md  OBFUSCATION.md  OIDC_SSO.md  POLICY.md  POLICY_LOCKING.md  QUICKSTART.md  QUICKSTART_QUOTAS.md  REDTEAM.md  RUNBOOKS.md  RUNTIME.md  SAFETY_COPILOT.md  SAML_QUICKSTART.md  SAML_SSO.md  SAML_SSO_SECURITY.md  SECURE_METRICS.md  SERVICE.md  SLACK_INTEGRATION.md  (+8 more)
examples/: federation_demo.py
extracted_patterns/: extracted_patterns.csv  extracted_patterns.json  extracted_patterns.py  integrated_patterns.csv
grpc/: score.proto
guardbench/: __init__.py
integrations/: browser-extension.crx
models/: ml_fast.pkl
policies/: ACCESS_CONTROL_POLICY.md  BUSINESS_CONTINUITY_PLAN.md  INCIDENT_RESPONSE_PLAN.md
policy/: policy.yaml  policy_expanded.yaml
report/: auto_tune.json  baseline_fn.csv  baseline_fp.csv  candidate_fn.csv  ci_slices.json  index.html  index_4fa2fa18.html  index_6d3b2809.html  index_a2786757.html  index_db81e910.html  metrics_2163fe1f.json  metrics_27c799e2.json  metrics_4fa2fa18.json  metrics_6b2f4f76.json  metrics_6d3b2809.json  metrics_a2786757.json  metrics_abdfab4b.json  metrics_db81e910.json  metrics_e2d0d4e9.json  redteam_summary.yaml  threshold_sweep.csv
scripts/: README_ML_TRAINING.md  aegis_pattern_generator.py  check_training_progress.sh  demo_mfa.py  deploy.sh  download_datasets.py  evidence_pack_v2.py  extract_patterns_comprehensive.py  ml_training_daemon.py  post_training_setup.sh  scan_env_reads.py  simple_mfa_test.py  sla_collector.py  start_aegis.sh  start_ml_system.sh  train_ml_model.py  train_transformer_model.py  validate_and_integrate_patterns.py  worker.py
service/: api.py
src/: config.py  config_migration.py
templates/: policy.html  report.html
tests/: README_HARDENING.md  conftest.py  golden_eval_set.csv  run_hardening.py  stress_test_suite.py  test_adapter_registry.py  test_adapters.py  test_adapters_azure.py  test_adapters_e2e.py  test_adapters_openai.py  test_anomaly_detection.py  test_anomaly_tuning.py  test_assistant.py  test_assistant_integration.py  test_autopatch_canary.py  test_autopatch_sanity.py  test_candidate_multilingual.py  test_ci_gate_logic.py  test_config.py  test_config_sweep.py  test_connectors_integration.py  test_connectors_unit.py  test_conversation_harness.py  test_cors_and_limits.py  test_cost_visibility.py  test_counterfactual.py  test_dataset_sampler.py  test_dataset_schema.py  test_db_stability.py  test_demo_github_actions.py  test_evaluation_engine.py  test_export_endpoints.py  test_exports.py  test_federated_telemetry.py  test_federation_signatures.py  test_golden_eval_set.py  test_grpc_smoke.py  test_grpc_trailers.py  test_hardening_injection.py  test_hardening_overdefense.py  (+52 more)
tools/: mkdevcert.sh  sbom.py  sign_manifest.py  wrk_score.lua
wp-ai-engine-pro-simple/: README.md  mcp-server.php  wp-ai-engine-pro.php
wp-ai-engine-pro-tested/: CAPABILITIES.md  CHANGELOG.md  INSTALLATION-GUIDE.md  README.md  TESTING-GUIDE.md  mcp-server.php  wp-ai-engine-pro.php
(+440 files in other folders)
