[project]
name = "searai"
version = "0.3.1"
description = "SeaRai by SeaTechOne LLC - Enterprise AI safety evaluation platform with REST/gRPC APIs, red-team automation, and governance"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "grpcio-reflection>=1.62.0",
    "grpcio-health-checking>=1.62.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "jinja2>=3.1.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "slack-bolt>=1.19.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "black>=24.4.0",
    "build>=1.2.0",
]
image = [
    "pillow>=10.3.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]
